Add default text color

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 @layer components {
+  /* html */
+  html {
+    @apply text-light-1;
+  }
+
   /* main */
   .main-container {
     @apply flex min-h-screen flex-1 flex-col items-center bg-dark-1 px-6 pb-10 pt-28 max-md:pb-32 sm:px-10;
