--- a/app/globals.css
+++ b/app/globals.css
@@ -3,9 +3,36 @@
 @tailwind utilities;
 
 @layer components {
-  /* html */
+  /* global */
   html {
     @apply text-light-1;
+  }
+  
+  :root {
+    --primary: rgb(18 20 23 / 1);
+    --secondary: #7E838E;
+  }
+
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: var(--secondary) var(--primary);
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 15px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: var(--primary);
+    border-radius: 5px;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--secondary);
+    border-radius: 14px;
+    border: 3px solid var(--primary);
   }
 
   /* main */
